# raw-gfx

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.c  shader.c  shader.h
src/shaders/: default.vert  mult.vert  translate.vert
